Fix overlapping background of quarter and objective filter and fix border in header

--- a/frontend/src/app/application-top-bar/application-top-bar.component.scss
+++ b/frontend/src/app/application-top-bar/application-top-bar.component.scss
@@ -26,6 +26,7 @@
   font-size: 16px;
   padding: 10px;
   border-radius: 8px;
+  border: 1px solid transparent;
 
   mat-icon {
     transform: scale(0.95);
